fix: view-post page (alignment & fonts)

--- a/src/app/pages/view-post/view-post.component.css
+++ b/src/app/pages/view-post/view-post.component.css
@@ -7,4 +7,13 @@
     font-weight: bold;
     color: #88B2C4;
     text-transform: capitalize;
+    font-family: "Viaoda Libre", serif;
+}
+
+.post-name {
+    font-family: "Viaoda Libre", serif;
+}
+
+.author h3 {
+    font-family: "Viaoda Libre", serif;
 }
